[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "langchain-anthropic>=0.3.10",
    "langgraph>=0.3.25",
    "langsmith>=0.3.24",
    "typing-extensions>=4.13.1",
]
