[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipython>=9.0.2",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.58",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "langchain[deepseek,ollma]>=0.3.23",
    "langgraph>=0.3.25",
    "langsmith>=0.3.24",
    "typing-extensions>=4.13.1",
]
